add tenantId to all required operations
